--- a/docs/docs/css/extra.css
+++ b/docs/docs/css/extra.css
@@ -1,15 +1,25 @@
-.md-sidebar--secondary {
-	/* margin-left: 0; */
-	display: none;
-}
 .md-content {
-	font-size: 150%;
+	font-size: 140%;
 	max-width: 800px;
+}
+.md-nav.md-nav--secondary {
+	padding-left: 1em;
+}
+.md-sidebar--secondary .md-nav__list {
+	list-style-type: square;
+}
+.md-sidebar--secondary .md-nav__list .md-nav__list {
+	list-style-type: circle;
+}
+.md-sidebar--secondary .md-nav__list .md-nav__list .md-nav__list {
+	list-style-type: disc;
+}
+.md-main__inner {
+    padding-bottom: 5rem;
 }
 .md-typeset .highlight pre {
 	padding: .7rem .6rem;
 }
-
 .md-typeset .admonition {
 	font-size:  0.75rem;
 }
